--- a/VK/ru.lproj/Localizable.strings
+++ b/VK/ru.lproj/Localizable.strings
@@ -19,10 +19,10 @@
 "photo_gallery" = "Фото альбом";
 "go_to_post" = "Перейти на пост";
 "check_word" = "Проверка слова";
-"enter_word" = "Введите слово";
+"enter_word" = "Отмена";
 "feed" = "Лента";
 "new_post" = "Новый пост";
-"alert_check_word" = "Это поле не может быть пустым! Введите слово для проверки!";
+"alert_check_word" = "Данный пост уже есть в избранном";
 "right" = "Верно!";
 "wrong" = "Не верно!";
 "favorites" = "Избранное";
