--- a/VK/ru.lproj/Localizable.strings
+++ b/VK/ru.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "sign_in" = "Войти";
 "sign_up" = "Регистрация";
 "auto_login" = "Выполнен автоматический вход";
-"login_error" = "Ошибка входа";
+"login_error" = "Ошибка автоматического входа";
 "enter_login_and_password" = "Введите заново логин и пароль";
 "close" = "Закрыть";
 "sign_in_or_sign_up" = "Войдите или зарегистрируйтесь";
@@ -32,7 +32,7 @@
 "moscow" = "Москва";
 "pin" = "Точка";
 "brutforce" = "Готово! Пароль: ";
-"cat_pirat" = "Кот пират";
+"cat_pirat" = "Роберт Дауни";
 "advanced" = "Продвинутый";
 "cat_programmer" = "Кот прогер";
 "beginner" = "Новичек";
