--- a/VK/ru.lproj/Localizable.strings
+++ b/VK/ru.lproj/Localizable.strings
@@ -47,7 +47,7 @@
 "status" = "добавьте статус";
 "show_status" = "Поменять статус";
 "albom" = "Фотоальбом";
-"biometrical" = "Использовать Face ID/Touch ID";
+"biometrical" = " Вход по лицу или отпечатку";
 "empty_field" = "Поля не должны быть пустыми";
 "enter_password_to_log" = "Введите пароль для входа в аккаунт";
 "error_biometrical" = "Ошибка, невозможно использовать биометрию";
@@ -58,3 +58,4 @@
 "error" = "Ошибка";
 "check_update" = "Посмотрите последние обновления";
 "click_notification" = "Нажмите на это уведомление, чтобы посмотреть обновления";
+"status" = "Добавьте статус";
