--- a/VK/ru.lproj/Localizable.strings
+++ b/VK/ru.lproj/Localizable.strings
@@ -59,3 +59,6 @@
 "check_update" = "Посмотрите последние обновления";
 "click_notification" = "Нажмите на это уведомление, чтобы посмотреть обновления";
 "status" = "Добавьте статус";
+"logout" = "Вы действительно хотите выйти из аккаунта?";
+"out" = "Выход";
+"cancel" = "Отменить выход";
