--- a/VK/ru.lproj/Localizable.strings
+++ b/VK/ru.lproj/Localizable.strings
@@ -62,3 +62,5 @@
 "logout" = "Вы действительно хотите выйти из аккаунта?";
 "out" = "Выход";
 "cancel" = "Отменить выход";
+"hero" = "Сохранено";
+"hero_post" = "Данный пост теперь в избранном";
